fixed layout issue

--- a/src/components/Header/HeaderArea.module.css
+++ b/src/components/Header/HeaderArea.module.css
@@ -1,4 +1,4 @@
-header {
+.page-header_area {
     display: block;
     margin: 2rem 4rem 0 4rem;
 }
