--- a/src/components/HeroArea/HeroArea.module.css
+++ b/src/components/HeroArea/HeroArea.module.css
@@ -1,3 +1,7 @@
+@import url('../../assets/styles/variables.css');
+.hero-area_section {
+    overflow: hidden;
+}
 .hero-area {
     display: flex;
     align-content: center;
